# exercicio_garagem_django-1

./: .env_exemplo  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
config/: .env_exemplo  settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_categoria.py  0003_rename_marcas_marca.py  0004_acessorio_cor.py  0005_veiculo.py  0006_alter_acessorio_options_alter_cor_options_and_more.py  0007_veiculo_modelo.py  0008_veiculo_acessorio_alter_veiculo_modelo.py  0009_veiculo_description_veiculo_image_veiculo_name.py  0010_alter_veiculo_preco.py
garagem/models/: __init__.py  acessorio.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  categoria.py  modelo.py  veiculo.py
garagem/views/: __init__.py  categoria.py  modelo.py
usuario/migrations/: 0001_initial.py
